# QT5_SimpleCom

./: .cproject  .project  CMakeLists.txt
src/: main.cpp  simplecom.cpp  simplecom.h  simplecom.ui
